[package]
name = "labcaller-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking", "rustls-tls"] }
migration = { path = "migration" }
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
hyper = "1.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.0.1"
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
sea-query = "0.31.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
byteorder = "1.5.0"
aws-sdk-s3 = "1.51.0"
aws-config = "1.5.6"
aws-types = "1.3.3"
futures = "0.3.30"
aws-smithy-types = "1.2.6"
kube = { version = "0.95.0", features = [
    "runtime",
    "derive",
    "client",
    "config",
] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde_with = "3.10.0"
axum-keycloak-auth = "0.6.0"
openidconnect = "3.5.0"
serde_yaml = "0.9.34"
secrecy = "0.8.0"
